1.4alpha1 - [RELEASEDATE]
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #13103: Different axes end styles.
- Implemented feature #13102: Axes not extending beyond zero in line charts


1.3 - Monday 16 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.3rc1 - Tuesday 10 June 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12581: Wrong axis captions in bar charts with manual min/max
  values


1.3beta1 - Tuesday 27 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- No changes.


1.3alpha1 - Monday 05 May 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #10829: Get resource from driver.
- Implemented feature #10957: Embed glyphs for exact SVG font width
  estimation.
  (Patch by Freddie Witherden)
- Implemented feature #11979: Line width configurable per data set.
- Implemented feature #12382: Enhance line chart to allow invisible lines.
- Fixed issue #12483: Average dataset does not work with a single value.


1.2.1 - Monday 21 January 2008
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Implemented feature #9407: Cairo driver.
- Fixed issue #11777: Optionally independent axis font configuration.
- Fixed issue #12254: Bad property-check for strokeLineJoin in SVG driver.
- Fixed issue #12295: Broken automatic scaling with manually set min value,
  not divisible by major step.
- Fixed issue #12326: Per datapoint colors not used with bar charts.
- Fixed issue #12405: Highlightfontsize reduced when padding > 0 in highlight
  font options.


1.2 - Monday 17 December 2007
^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^

- Fixed issue #12238: Documentation error.
- Fixed issue #12246: dataBorder doesn't works in 2D renderer for piecharts.

